cmake_minimum_required(VERSION 3.15)
project(examples)

set(CMAKE_CXX_STANDARD 20)

add_executable(example main.cpp)

add_executable(c_test c/test.c)
add_executable(c_demo c/demo.c)

add_executable(cpp_module_demo cpp/module_demo.cpp)
add_executable(cpp_union_test cpp/union_test.cpp)

add_executable(sol88 algorithm/solution88.cpp)
add_executable(sol94 algorithm/solution94.cpp)
add_executable(sol144 algorithm/solution144.cpp)
add_executable(sol429 algorithm/solution429.cpp)
add_executable(sol590 algorithm/solution590.cpp)
add_executable(sol836 algorithm/solution836.cpp)
add_executable(sol409 algorithm/solution409.cpp)
add_executable(sol56 algorithm/solution56.cpp)
add_executable(sol0811 algorithm/solution0811.cpp)
add_executable(sol46 algorithm/solution46.cpp)
add_executable(sol53 algorithm/solution53.cpp)
add_executable(sol98 algorithm/solution98.cpp)
add_executable(sol69 algorithm/solution69.cpp)
add_executable(sol101 algorithm/solution101.cpp)
add_executable(sol128 algorithm/solution128.cpp)
add_executable(sol124 algorithm/solution124.cpp)
add_executable(sol733 algorithm/solution733.cpp)
add_executable(sol133 algorithm/solution113.cpp)
add_executable(sol75 algorithm/solution75.cpp)
add_executable(sol344 algorithm/solution344.cpp)
add_executable(sol402 algorithm/solution402.cpp)
add_executable(sol621 algorithm/solution621.cpp)
add_executable(sol118 algorithm/solution118.cpp)
add_executable(sol217 algorithm/solution217.cpp)
add_executable(sol26 algorithm/solution26.cpp)
add_executable(sol740 algorithm/solution740.cpp)
add_executable(sol198 algorithm/solution198.cpp)
add_executable(sol1482 algorithm/solution1482.cpp)
add_executable(sol166 algorithm/solution166.cpp)
add_executable(sol598 algorithm/solution598.cpp)
add_executable(sol121 algorithm/solution121.cpp)
add_executable(sol191 algorithm/solution191.cpp)
add_executable(sol438 algorithm/solution438.cpp)

